force-app/main/default/objects/System_Notification__c/System_Notification__c.object-meta.xml
<CustomObject>
    <description>Used to store emails sent from SAP, WCS and other systems in Salesforce as reference for Customer Service</description>
    <label>System Notification</label>
    <nameField>
        <displayFormat>SN-{00000}</displayFormat>
        <label>System Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>