force-app/main/default/objects/System_Notification__c/fields/Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Date__c</fullName>
    <description>Field to Store Email Date</description>
    <label>Email Date</label>
    <type>DateTime</type>
</CustomField>