force-app/main/default/objects/System_Notification__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <description>Field to Store From Address</description>
    <label>From Address</label>
    <length>180</length>
    <type>Text</type>
</CustomField>