force-app/main/default/objects/System_Notification__c/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <description>Field to capture grouping</description>
    <label>Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>