force-app/main/default/objects/System_Notification__c/fields/Legacy_Email_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Email_Number__c</fullName>
    <description>Field to capture legacy email number</description>
    <label>Legacy Email Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>