force-app/main/default/objects/System_Notification__c/fields/Order_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_USD__c</fullName>
    <description>Field to store the order amount in USD.</description>
    <label>Order Amount (USD)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>