force-app/main/default/objects/System_Notification__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <description>Field to store the PO Number.</description>
    <label>PO #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>