force-app/main/default/objects/System_Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>To_Address__c</columns>
    <columns>Email_Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CC_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_Subject__c</field>
        <operation>contains</operation>
        <value>1842406</value>
    </filters>
    <label>All</label>
</ListView>